# tmom-recon

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yml
src/tmom_recon/: __init__.py  svd.py
src/tmom_recon/data/: __init__.py  columns.py  config.py  schema.py
src/tmom_recon/lattice/: __init__.py  core.py  neighbors.py
src/tmom_recon/measurements/: __init__.py  dispersive_measurement.py  measurement_pipeline.py  twiss_from_measurement.py
src/tmom_recon/physics/: __init__.py  bpm_phases.py  closed_orbit.py  dispersive.py  dpp_calculation.py  errors.py  momenta.py  transverse.py
tests/: conftest.py
tests/data/sequences/: b1_120cm_crossing.seq
tests/filtering/: test_svd.py
tests/momentum/: momentum_test_utils.py  test_dispersive_measurement.py  test_dispersive_measurement_uncertainties.py  test_dispersive_momentum.py  test_transverse_momentum.py
tests/physics/: __init__.py  test_bpm_phases.py  test_momenta_uncertainty_jacobian.py
